--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <img src="/assets/img/charm.webp">
             <h1>Shiny Attempt:</h1>
             <h2 id="count-el">0</h2>
-            <button id="increment-btn" onclick="increment()">INCREMENT</button>
+            <button id="increment-btn" onclick="increment()">ENCOUNTER</button>
             <button id="save-btn" onclick="save()">SAVE</button>
             <p id="save-el">Previous encounters: </p>
             <script src="index.js">
