--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
     <head>
         <link rel="stylesheet" href="index.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&display=swap" rel="stylesheet">
     </head>
     <div id="container">
         <body>
             <img src="/assets/img/charm.webp">
             <h1>Shiny Attempt:</h1>
             <h2 id="count-el">0</h2>
-            <button id="increment-btn" onclick="increment()">ENCOUNTER</button>
+            <button id="increment-btn" onclick="increment()">ATTEMPT</button>
             <button id="save-btn" onclick="save()">SAVE</button>
             <p id="save-el">Previous encounters: </p>
             <script src="index.js">
                 nnerText
             </script>
+            <p id="note">NOTE: Save clear counter, refreshing clears ALL data, incl. previous encounters.</p>
             <p><i>Background by <a href="https://www.reddit.com/user/kmm465/">Teva</a></i></p>
         </body>
     </div>
